clusters/calcifer-home/apps/home-automation/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: http
